[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/botoes_touch.gd" type="Script" id=1]
[ext_resource path="res://icons/play_01.png" type="Texture" id=2]
[ext_resource path="res://icons/main_menu.png" type="Texture" id=3]
[ext_resource path="res://cenas/Notificacao.tscn" type="PackedScene" id=4]

[node name="botoesTouch" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="start" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 220, 640 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 2 )

[node name="depois" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 220, 640 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 2 )

[node name="input" type="LineEdit" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -285.0
margin_right = 129.0
margin_bottom = -245.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 120.25, 20 )
placeholder_text = "Acha que sabe a resposta? Tenta..."

[node name="menu" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 460, 14 )
scale = Vector2( 0.15625, 0.140625 )
normal = ExtResource( 3 )

[node name="fase" type="Label" parent="CanvasLayer"]
margin_top = 40.0
margin_right = 30.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
text = "X"
align = 1
valign = 1

[node name="titulo" type="Label" parent="CanvasLayer"]
margin_left = 70.0
margin_top = 40.0
margin_right = 265.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
text = "Titulo do enigma"
align = 1
valign = 1

[node name="enigma" type="Label" parent="CanvasLayer"]
margin_left = 190.0
margin_top = 450.0
margin_right = 287.0
margin_bottom = 527.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Aqui vai o texto do enigma"
align = 1
valign = 1
autowrap = true

[node name="dicaAberta" type="Label" parent="CanvasLayer"]
margin_left = 120.0
margin_top = 391.0
margin_right = 315.0
margin_bottom = 416.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Dica do enigma"
align = 1

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 4 )]
[connection signal="pressed" from="CanvasLayer/start" to="." method="_on_atualiza_pressed"]
[connection signal="pressed" from="CanvasLayer/depois" to="." method="_on_depois_pressed"]
[connection signal="text_changed" from="CanvasLayer/input" to="." method="_on_input_text_changed"]
[connection signal="text_entered" from="CanvasLayer/input" to="." method="_on_input_text_entered"]
[connection signal="pressed" from="CanvasLayer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/Panel/again" to="." method="_on_again_pressed"]

[editable path="CanvasLayer/Popup"]
